--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 <li><a href="#communicate-results">Communicate Results</a><ul>
 <li><a href="#consider-the-audiences-needs">Consider the audiences needs</a></li>
 <li><a href="#first-things-first">First things first</a></li>
-<li><a href="#dont-make-it-hard-to-get">Don't make it hard to get</a></li>
+<li><a href="#dont-make-it-hard-to-understand">Don't make it hard to understand</a></li>
 <li><a href="#sections-of-a-research-documentation">Sections of a research documentation</a></li>
 <li><a href="#components-of-deliverables-and-reports">Components of deliverables and reports</a><ul>
 <li><a href="#text">Text</a></li>
@@ -1174,6 +1174,7 @@ If you record audio in parallel you can be more relaxed when writing what was <e
 <img src="images/commentsAnalysis.png" alt="Annotating data in a wordprocessor" /><figcaption>Annotating data in a wordprocessor</figcaption>
 </figure>
 <h3 id="annotate-your-notes">Annotate your notes</h3>
+<!-- I am unsure if that makes sense for beginners or not -->
 <p>After you added your participant codes, you can start to review and to annotate your notes in order to find possible interpretations, themes and meaning behind the observations and utterances.</p>
 <p>This will help you to get familiar with the data and to derive meaningful themes and insights later.</p>
 <p>Annotations can be full sentences, as well as short list of words. Usually, they concern a line in the transcript but naturally you can comment on whole sections or just at words, too.</p>
@@ -1213,6 +1214,9 @@ If you record audio in parallel you can be more relaxed when writing what was <e
 </ul>
 <p>But why should you want to use an analog analysis, if it needs all these resources? Partly, the decision can be based on preferences: Some people like that they can move around the notes by hand and can get an overview of their data by just stepping back and glancing over it.</p>
 <p>If you work with peers on your analysis, you have some advantages when using the analogue pen and paper approach: you can easily discuss your ideas with others and will get new ideas how to structure the data. You can as well invite your boss to take a look and be part of the team, at least for some time. This type of on-site, collaborative, analysis is best done analog. Using digital tools it is not that easy and direct – despite of all the great digital innovations we have nowadays.</p>
+<figure>
+<img src="images/DesignEthnographyStudioLifeAnalysis4_crop.jpg" alt="Making sense of data together, using lots of sticky notes. (Image by flickr user Kalsau, licensed under CC-BY 2.0, https://creativecommons.org/licenses/by/2.0/; Changes: Image was cropped)" /><figcaption>Making sense of data together, using lots of sticky notes. (Image by <a href="https://www.flickr.com/photos/kalsau/">flickr user Kalsau</a>, licensed under CC-BY 2.0, <a href="https://creativecommons.org/licenses/by/2.0/" class="uri">https://creativecommons.org/licenses/by/2.0/</a>; Changes: Image was cropped)</figcaption>
+</figure>
 <h4 id="how-to-analysis-on-the-computer">How to: Analysis on the computer</h4>
 <p>For analysis on your computer, I suggest the following steps for preparing your analysis:</p>
 <ol type="1">
@@ -1249,12 +1253,6 @@ If you record audio in parallel you can be more relaxed when writing what was <e
 </figure>
 <h4 id="move-in-approximation">Move in Approximation</h4>
 <p>The easiest way to start a structure, is moving similar data in approximation. If you do you analysis on paper, cluster the notes you assume to follow a common theme in one place, and notes for other themes in other places. If you analyze using a word processor, move similar notes in adjacent lines. Create different groups, each containing similar notes, by using several line breaks above and below such a group or by creating a list for each assumed theme.</p>
-<figure>
-<img src="images/abstractGroupLines.svg" alt="two (preliminary) groups as lines (the digital way)" class="portrait" /><figcaption>two (preliminary) groups as lines (the digital way)</figcaption>
-</figure>
-<figure>
-<img src="images/abstractGroupPapers.svg" alt="two (preliminary) groups as sticky notes (the analog way)" class="portrait" /><figcaption>two (preliminary) groups as sticky notes (the analog way)</figcaption>
-</figure>
 <blockquote>
 <ul>
 <li>Asking herself: what would impress the person (a safety advisor) »probably not that the blueprint is beautiful«</li>
@@ -1534,18 +1532,20 @@ Before:</p>
 <p>If you work with others, the results of your research need to be communicated so they can act upon your research results.</p>
 <p>Aside from getting the results of your research across, communicating your results has some positive side effects: collecting, organizing and summarizing your findings will make it easier for yourself to remember your findings and you may be even able to improve your analysis further.</p>
 <h2 id="consider-the-audiences-needs">Consider the audiences needs</h2>
-<p>Who will recieve the research results and what interests do they have? There may be different stakeholders with different needs, e.g.</p>
+<p>Who will receive the research results and what interests do they have? There may be different stakeholders with different needs, e.g.</p>
 <ul>
 <li>Management</li>
 <li>Programmers</li>
 <li>Designers</li>
 <li>…</li>
 </ul>
-<p>Some of their needs align, some may differ. So before you start you should ask who will recieve the results and what specific interests they have. Also inquire if there is any preferred format. Some may only take written reports, others may be used to slidedecks.</p>
+<p>Some of their needs align, some may differ. Before you start, you should ask yourself who will receive the results and what specific interests they have. Also inquire if there is any preferred format. Some may prefer text-based reports, others may be used to slidedecks.</p>
 <h2 id="first-things-first">First things first</h2>
-<p>I try to structure my documentation in a way that puts the essential information first (Also called »Inverted pyramid style«). A simple rule of thumb is, that if a reader stops early at some point, they already know the most crucial information. If the documentation is structured in a different way it can happen that after reading half of it, the most crucial information has not delivered. Also it is motivating to deal with documents that put important matters first. One can read e.g. the summary in the beginning and then decide that this is the needed information and continue – or discard the document and don't wast time.</p>
-<h2 id="dont-make-it-hard-to-get">Don't make it hard to get</h2>
-<p>You create the documentation for people who are not user researchers and who often have not taken part in the research. They won't understand any jargon of your profession and maybe also not the vocabulary the users use. Thus, avoid language that is hard to grasp or uses words unknown to your readers. Instead, »translate« for them: Describe the research in terms they know and help them to make sense of the participants’ language. As a rule of thumb, rather assume too few knowledge than too much. A person knowing something will just overhear or overlook an explaination while a person who lacks knowledge is lost without it.</p>
+<p>Structure documentation in a way that puts the essential information first. A simple rule of thumb is this: If a reader stops early at some point, they should already know the most crucial information. If the documentation is structured in a different way, it can happen that after reading half of it, the most crucial information has not delivered. Also, it is motivating to deal with documents that put important matters first. One can read e.g. the summary in the beginning and then decide that this is the needed information and continue – or discard the document and don't waste time.</p>
+<h2 id="dont-make-it-hard-to-understand">Don't make it hard to understand</h2>
+<!-- TODO: Translator-Metaphor: User to audience? -->
+<p>You create the documentation for people who are not user researchers and who often have not taken part in the research. They won't understand any jargon of your profession and maybe also not the vocabulary the users use. Thus, avoid language that is hard to grasp or uses words unknown to your readers. Instead, »translate« for them: Describe the research in terms they know and help them to make sense of the participants’ language and actions.</p>
+<p>As a rule of thumb, rather assume too few knowledge than too much. A person knowing something will just overhear or overlook an explaination while a person who lacks knowledge is lost without it.</p>
 <h2 id="sections-of-a-research-documentation">Sections of a research documentation</h2>
 <p>There are some typical sections of a research documentation:</p>
 <dl>
@@ -1586,7 +1586,8 @@ Before:</p>
 <li>Never use a long word where a short one will do.</li>
 <li>If it is possible to cut a word out, always cut it out.</li>
 <li>Never use the passive where you can use the active.</li>
-<li>Never use a foreign phrase, a scientific word or a jargon word if you can think of an everyday English equivalent. &gt; &gt; 6. Break any of these rules sooner than say anything barbarous.</li>
+<li>Never use a foreign phrase, a scientific word or a jargon word if you can think of an everyday English equivalent.</li>
+<li>Break any of these rules sooner than say anything barbarous.</li>
 </ol>
 </blockquote>
 <p><a href="#fn4" class="footnoteRef" id="fnref4"><sup>4</sup></a></p>
@@ -1599,6 +1600,7 @@ Before:</p>
 </blockquote>
 <p>Remember to protect the participant's identity if they did not give you the permission to share their quotes or names. If they did not give you the permission, only share a plausible, but faked »quote« and don't use real names but faked ones as well. Don’t deceive your audience either: mention that the names and quotes are not real but are only corresponding to their actual counterparts.</p>
 <h3 id="scenarios">Scenarios</h3>
+<!-- TODO: Explain why scenarios are great: 1) Communication 2) Current use 3) Future use 4) Allowing What if and it-is in one format. Also: Usability tests -->
 <p>Activities don’t happen in isolation from each other: They depend on previous activities and (possible changing) motivations. One way to communicate a sequence of interrelated activities is a scenario. Simply put, a scenario is a short story written as text or given as a sequence of images (like a comic)</p>
 <p>A good framework for writing scenarios is asking yourself these questions:</p>
 <ul>
@@ -1656,6 +1658,7 @@ Before:</p>
 <img src="images/exampleWrittenReport2.png" alt="page spread from a report on wiki use for teaching at university" /><figcaption>page spread from a report on wiki use for teaching at university</figcaption>
 </figure>
 <h3 id="slides">Slides</h3>
+<!-- TODO: slides with you talking or as a container for information without you being there ein person? -->
 <p>Slides can deliver the same content as written reports or quick findings. They convey the information in a more visual way – so they have fewer text and more images, diagrams, and storyboards.</p>
 <p>If you give the presentation yourself try to deliver as few as possible of the information by text on the slides. You can do the talking and the slides supplement the information you give. On the other side, it may makes sense to use more text on the slides if you just share the slides with others and don’t present them yourself.</p>
 <figure>
@@ -1663,7 +1666,10 @@ Before:</p>
 </figure>
 <h3 id="posters">Posters</h3>
 <p>A poster is a great way to show the results in a way that is easy to grasp and will be consumed too by people who do not take specific interest in user research. They can be put up in a hallway for everyone who walks by.</p>
-<p>Focus on a few important findings and show them using mainly graphical elements. You also can create a big version of key diagrams you creaed or summarized.</p>
+<p>Focus on a few important findings and show them using graphical elements and text. You also can create a big version of diagrams you created or summarized.</p>
+<figure>
+<img src="images/Poster_WiktionaryUsers_WMDE.png" alt="A poster showing three core findings from research with editors of the free online dictionary Wiktionary (By Wikimedia Deutschland, Licensed under CC-BY-SA 4.0, https://creativecommons.org/licenses/by-sa/4.0/)" /><figcaption>A poster showing three core findings from research with editors of the free online dictionary Wiktionary (By Wikimedia Deutschland, Licensed under CC-BY-SA 4.0, <a href="https://creativecommons.org/licenses/by-sa/4.0/" class="uri">https://creativecommons.org/licenses/by-sa/4.0/</a>)</figcaption>
+</figure>
 <h1 id="appendix">Appendix</h1>
 <h2 id="learn-even-more">Learn (even) more</h2>
 <h3 id="books">Books</h3>
