--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ I got some interesting mails back and tried to consider their answers in my desi
 <li><em>»What will happen if you can’t solve this problem?«</em></li>
 </ul>
 <hr />
-<p>There are other frameworks, like <em>AEIOU</em> [^if you want to know about its origins, read <a href="https://www.epicpeople.org/building-a-useful-research-tool/">Building a Useful Research Tool: An Origin Story of AEIOU</a>]. If you don't like MAP, it can be a good alternative. It is a mnemonic for the following aspects:</p>
+<p>There are other frameworks, like <em>AEIOU</em> <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>. If you don't like MAP, it can be a good alternative. It is a mnemonic for the following aspects:</p>
 <ul>
 <li><em><strong>A</strong>ctivities</em> – what people to achieve something</li>
 <li><em><strong>E</strong>nvironments</em> where do the activities happen?</li>
@@ -530,7 +530,7 @@ Use it when:
 <figure>
 <img src="images/talkDiagram_closed.svg" alt="short closed questions" /><figcaption>short closed questions</figcaption>
 </figure>
-<p>These questions demand very specific answers from a determined set: Yes or no, marks from A-F, a list of nouns. They would be useful if you would want to do statistics, for analysis that allows us to give results like »56.3% agreed strongly on Question X«. However, we want to find out about the <em>why</em> and <em>how</em> of the participant’s work here <a href="#fn1" class="footnoteRef" id="fnref1"><sup>1</sup></a>.</p>
+<p>These questions demand very specific answers from a determined set: Yes or no, marks from A-F, a list of nouns. They would be useful if you would want to do statistics, for analysis that allows us to give results like »56.3% agreed strongly on Question X«. However, we want to find out about the <em>why</em> and <em>how</em> of the participant’s work here <a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a>.</p>
 <p>Imagine, in contrast to the research session outlined above (short answers, short questions) a day-to-day situation, in which you get to know about somebody else’s experiences: A conversation with a friend. In such an exchange you will tell each other about your experiences, what you felt, why you did this and that etc. In a diagram it would look like this:</p>
 <figure>
 <img src="images/talkDiagram_friend.svg" alt="giving longer answers, equal share" /><figcaption>giving longer answers, equal share</figcaption>
@@ -571,7 +571,7 @@ Use it when:
 <p>You: »Is this a good design?«</p>
 <p>Participant: »yes!«</p>
 </blockquote>
-<p>»Is…« -questions will be answered with »yes« or »no« – but we don't get to know <em>why</em> the participant approves or disapproves. In addition, »Is…«-Questions are a subtle form or influence <a href="#fn2" class="footnoteRef" id="fnref2"><sup>2</sup></a> : In case of doubt, it is likely that are participant just agrees to the suggestion you give by asking »Is…«</p>
+<p>»Is…« -questions will be answered with »yes« or »no« – but we don't get to know <em>why</em> the participant approves or disapproves. In addition, »Is…«-Questions are a subtle form or influence <a href="#fn3" class="footnoteRef" id="fnref3"><sup>3</sup></a> : In case of doubt, it is likely that are participant just agrees to the suggestion you give by asking »Is…«</p>
 <p>Sometimes, »Is«-Questions will come in a disguised form – as an addition, which is made to an open question:</p>
 <blockquote>
 <p>You: »Can you tell me how you solve this problem? <em>…Do you do it by just calling the client and resolving the issue?</em>«</p>
@@ -906,7 +906,7 @@ If you record audio in parallel you can be more relaxed when writing what was <e
 <p>Analyzing the data also helps to communicate your findings. You will be able to summarize it in a way that enables your colleagues or teammates to work with your findings without having taken part in all steps of the process.</p>
 <h2 id="doing-the-right-analysis">Doing the »right« Analysis</h2>
 <p>The data analysis is done by inferring themes from data points. Thus, the process is empirical (as it is based on gathered data). But even if the same data is used, different people will create different analysis. This is because the result of the analysis depends on the reasonable, but still individual and debatable, interpretation of the data. You could say that <em>»looking at last years design to quickly reuse elements«</em> belongs to a theme concerned with <em>»I want to save time«</em> or to a theme related to the topic of <em>»reviewing designs for inspiration«</em> (given that it could serve both from the user's perspective).</p>
-<p>There is no »right« or »wrong«, nor a clear cut criterion of being »close enough« to the data when you interpret your data. Instead of having a clear, measurable rule like the »you must have p&lt;0.05 significance« <a href="#fn3" class="footnoteRef" id="fnref3"><sup>3</sup></a> in statistics, most important is that your analysis is plausible (instead of »right« or »wrong«).</p>
+<p>There is no »right« or »wrong«, nor a clear cut criterion of being »close enough« to the data when you interpret your data. Instead of having a clear, measurable rule like the »you must have p&lt;0.05 significance« <a href="#fn4" class="footnoteRef" id="fnref4"><sup>4</sup></a> in statistics, most important is that your analysis is plausible (instead of »right« or »wrong«).</p>
 <p>I compare the process of analysis to building a house from a pile of Lego<sup>®</sup> bricks. These bricks are like the not-yet-analyzed data you start with. When you build a house out of these bricks, there is no single »right« building. But neither is it a process which is arbitrary.</p>
 <figure>
 <img src="images/lego_bricksToStartWith.jpg" alt="possible arrangement of bricks – but not a house" class="portrait" /><figcaption>possible arrangement of bricks – but not a house</figcaption>
@@ -1581,7 +1581,7 @@ Before:</p>
 <li>Break any of these rules sooner than say anything barbarous.</li>
 </ol>
 </blockquote>
-<p><a href="#fn4" class="footnoteRef" id="fnref4"><sup>4</sup></a></p>
+<p><a href="#fn5" class="footnoteRef" id="fnref5"><sup>5</sup></a></p>
 <p>In addition, read the text aloud – in particular, if you already noticed that you have had difficulties finding the right word or to express a complicated concept. If you need to re-read sentences to make sense of them or to stress the right words, you should go for a rewrite.</p>
 <h3 id="quotes">Quotes</h3>
 <p>Quotes convey the participant’s motivations and feelings. This is important to help others to have empathy with the users.</p>
@@ -1712,10 +1712,11 @@ We appreciate your participation.</p>
 <section class="footnotes">
 <hr />
 <ol>
-<li id="fn1"><p>Research concerned with finding out about »how« and »why« using methods like interviews and observations is also called »qualitative« research. In contrast, »quantitative research« usually tests hypothesis (like »an orange ›buy‹ button generates more sales that a blue one «) and employs controlled experiments and statistics. In this book we learn about qualitative methods<a href="#fnref1">↩</a></p></li>
-<li id="fn2"><p>Also called a »leading question«<a href="#fnref2">↩</a></p></li>
-<li id="fn3"><p>For those of you who love statistics (like me): Sorry for the example. I know that this criterion is highly debated<a href="#fnref3">↩</a></p></li>
-<li id="fn4"><p><a href="http://wikilivres.ca/wiki/Politics_and_the_English_Language">Orwell’s Rules for writers</a><a href="#fnref4">↩</a></p></li>
+<li id="fn1"><p>if you want to know about its origins, read <a href="https://www.epicpeople.org/building-a-useful-research-tool/">Building a Useful Research Tool: An Origin Story of AEIOU</a><a href="#fnref1">↩</a></p></li>
+<li id="fn2"><p>Research concerned with finding out about »how« and »why« using methods like interviews and observations is also called »qualitative« research. In contrast, »quantitative research« usually tests hypothesis (like »an orange ›buy‹ button generates more sales that a blue one «) and employs controlled experiments and statistics. In this book we learn about qualitative methods<a href="#fnref2">↩</a></p></li>
+<li id="fn3"><p>Also called a »leading question«<a href="#fnref3">↩</a></p></li>
+<li id="fn4"><p>For those of you who love statistics (like me): Sorry for the example. I know that this criterion is highly debated<a href="#fnref4">↩</a></p></li>
+<li id="fn5"><p><a href="http://wikilivres.ca/wiki/Politics_and_the_English_Language">Orwell’s Rules for writers</a><a href="#fnref5">↩</a></p></li>
 </ol>
 </section>
 </div>
