--- a/index.html
+++ b/index.html
@@ -166,11 +166,12 @@ I got some interesting mails back and tried to consider their answers in my desi
 <p>It was initially not easy to learn about this: Some books started with a lot of theory that was build on additional theories. Other books were more design oriented, but seemed to require a big team of well-trained people and a huge budget. However, there were also great resources, blog posts and conversations that helped me to find methods that I could use for my projects. In this book I want to show you how to use these methods.</p>
 <p>These methods should…</p>
 <ul>
-<li>…be useful for design projects in business and academia *… work without a large budget</li>
-<li>…be understandable and applicable without a specific (academic) background</li>
+<li>… be useful for design projects in business and academia</li>
+<li>… work without a large budget</li>
+<li>… be understandable and applicable without a specific (academic) background</li>
 </ul>
 <p>To ease learning, I provide examples. I found it particularly useful to have them myself when learning about skills like <em>asking open questions</em> or <em>clustering themes</em>. Much more useful than a definition is to see how these are done.</p>
-<p>Friends supported me by volunteering for an example research project on project work of freelancing designers, so a lot of examples will be drawn from this project.</p>
+<p>Friends supported me by volunteering for an example research project on the work of freelancing designers, so a lot of examples will be drawn from this project.</p>
 <h2 id="user-need-research-is-most-useful-in-early-stages-of-a-project">User need research is most useful in early stages of a project</h2>
 <p>User needs should be researched in <em>early</em> project stages. It is less useful when a lot of time and money has been spent already on building a particular product.</p>
 <p>Here are some scenarios in which user need research makes sense:</p>
