minor update, delete rework 3

--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
 <p>To be able to do research on the “how” and “why” of user’s work, you need to find people who would like to answer your questions and would show you what they do. These people are our (research) <em>participants</em>.</p>
 <h3 id="potential-participants-do-the-activity-that-is-in-your-research-question">Potential participants do the activity that is in your research question</h3>
 <p>Research participants should be able to talk about what they do and demonstrate it. Because of this, it makes sense to focus on activities when you recruit.</p>
-<p>For other methods, the criteria are more demographic like “30 year old male, making $50k/year and being interested in technology”. But this is not very helpful when you want to learn about motivations, activities and problems of people.</p>
+<p>For other methods, the criteria are more demographic like “30-40-year-old male, making more than $50k/year and being interested in technology”. But this is not very helpful when you want to learn about motivations, activities and problems of people.</p>
 <ul>
 <li><p>If, for example, you have the research question <em>“How and why do students use computers to learn for university?”</em> the activity is “learning for university”. This is what you should focus on: Find people who learn for university.</p></li>
 <li><p>If your question is “How and why do Wikipedia editors switch language versions”, the activity is “switching language versions”, additionally constraint by the role: “Wikipedia editors”. So you would try to find people who edit Wikipedia and switch language versions—for example because they edit in several languages.</p></li>
 </ul>
 <p>I don’t exclude the roles (“Student”, “Wikipedia Editor”), but I focus on the activities first. In the question “How and why do programmers organize their code”, the essential part is organizing the code. This is also what people can tell you about and what they can demonstrate. Yes, it is a pretty good guess that programmers “organize code”. But if you got designers, data analysts or mechatronics engineers who do that activity, you can learn from them as well.</p>
 <h3 id="recruit-participants-where-they-are">Recruit participants where they are</h3>
-<!-- ↑ that could be better, but even my german sentences are not great: …wo sie sind? -->
+<!-- ↑ that could be better, but even my german sentences are not great: …wo sie sind?! -->
 <p>I assume that you don’t have the money to employ a recruiting agency to get your participants. Thus, you will need to find and ask them yourself. Think of methods to make possible participants aware of your research and the possibility to participate. For example, participants could be found among</p>
 <ul>
 <li>Employees of other departments</li>
