--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
 <li><a href="#examples">Examples</a></li>
 </ul></li>
 <li><a href="#forms-and-templates">Forms and Templates</a><ul>
+<li><a href="#co-documentation-templates">Co-Documentation Templates</a></li>
 <li><a href="#consentForm">Consent and Release Form</a></li>
 </ul></li>
 </ul></li>
@@ -147,6 +148,8 @@
 <li><a href="https://github.com/lisacharlotterost">lisacharlotterost</a></li>
 <li>Claudia Landivar</li>
 </ul>
+<h4 id="resources" class="unnumbered">Resources</h4>
+<p>Supplemental information, versions for ebook-readers and co-documentation templates can be found at <a href="http://urbook.fordes.de" class="uri">http://urbook.fordes.de</a></p>
 <h4 id="suggestions-and-feedback" class="unnumbered">Suggestions and Feedback</h4>
 <p>This book is free/libre, if you help to improve it, it helps all other fellow readers.</p>
 <p>To point out mistakes you can:</p>
@@ -1015,7 +1018,7 @@ If you record audio in parallel, you can be more relaxed when writing what was <
 <li>Again, like in the diagram before, starting is good. I would hypothesize that the anticipation feels great and that the actual start even lifts the mood a bit on top (?)</li>
 <li>Like in P2, client wishes/negative feedback drag the mood down. Here we have negative feedback.</li>
 <li>Maybe starting/trying a new approach is a bit like the positive feeling at the projects start (also P4 shows a similar pattern, P2 framed it more as solving problems. I don’t know if that is the same)</li>
-<li>The pattern of “new approach good/client feedback bad” repeats (at time of the research, the project was still ongoing, so there can’t be a “end is positive” pattern here.)</li>
+<li>The pattern of “new approach good/client feedback bad” repeats (at time of the research, the project was still ongoing, so there can’t be an “end is positive” pattern here.)</li>
 </ul>
 </blockquote>
 <hr />
@@ -1197,7 +1200,7 @@ It can be interesting and useful to not only compare the diagrams on the same to
 <p>Grouping your notes based on insights about your participants provides great benefits. But it can be hard and may be not possible for all your data. Thus, creating groups using the same-things-mentioned methods is still a useful method and these groups may still evolve. Usually, I have some “same-things-mentioned”-groups in the beginning and far fewer at the end—but my analysis will be a mixture of both styles.</p>
 <p>To understand how to organize notes by themes based on insights, can be hard to grasp for beginners. To ease the learning, I provide another example:</p>
 <blockquote>
-<p>Let’s say we gathered this data (amongst others) when researching beginners in web programming:</p>
+<p>Let’s say we gathered this data (among others) when researching beginners in web programming:</p>
 <ul>
 <li>To try out stuff in HTML is fun</li>
 <li>I analyze Javascript code to understand patterns</li>
@@ -1376,7 +1379,7 @@ It can be interesting and useful to not only compare the diagrams on the same to
 <ul>
 <li>Do tests in the media you target</li>
 <li>Suitablility of media</li>
-<li>“being closer” : 2 page-spreads instead of single pages etc.</li>
+<li>“being closer”: 2 page-spreads instead of single pages etc.</li>
 </ul></li>
 <li>Idea Attachment</li>
 <li>Motivation at the beginning; then the problems start.</li>
@@ -1757,9 +1760,9 @@ Before:</p>
 <li><strong>Observing the User Experience : A Practitioner’s Guide to User Research</strong> by Goodman, Elizabeth; Kuniavsky, Mike; Moed, Andrea. 2nd Edition. Amsterdam: Elsevier, 2012. ISBN 978-0-123-84870-3 <br> <em>Covers multiple user research methods as well as research planning, recruiting and communicating results. Particularly interesting are the chapters on recruiting and analysis of qualitative data.</em></li>
 <li><strong>Interviewing Users : How to Uncover Compelling Insights</strong> by Portigal, Steve. 1. Edition. New York: Rosenfeld Media, LLC, 2013. ISBN 978—1-9-33-82-0 <br> <em>As the title suggests, it’s focused on asking questions and listening to answers, but it covers additional methods as well. Includes lots of useful tips.</em></li>
 <li><strong>Shane, the Lone Ethnographer: A Beginner’s Guide to Ethnography</strong> by Galman, Sally Campbell. Lanham: Rowman Altamira. ISBN 978-0-759-10344-3 <br> <em>Lots of the methods I described originated in ethnography. This book gives an hands-on and thoughtful introduction to enthography. Comes as a comic and is fun to read. Minor flaw: The lettering is a bit obscure</em></li>
-<li><strong>Successful Qualitative Research : A Practical Guide for Beginners</strong> by Clarke, Victoria; Braun, Virginia. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br> <em>This book is aimed at aspiring academic researchers. Hands-on but covers the underlying (social science) theory as well. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of “Thematic Analysis”) </em></li>
+<li><strong>Successful Qualitative Research : A Practical Guide for Beginners</strong> by Clarke, Victoria; Braun, Virginia. London: SAGE, 2013. ISBN 978-1-847-87581-5 <br> <em>This book is aimed at aspiring academic researchers. Hands-on but covers the underlying (social science) theory as well. It inspired much of the analysis section in this book. Interesting for those who want to know more about doing thorough analysis of data (using the method of “Thematic Analysis”)</em></li>
 <li><strong>Rapid Contextual Design : A How-to Guide to Key Techniques for User-centered Design</strong>by Holtzblatt, Karen; Wendell, Jessamyn Burns; Wood, Shelley. Amsterdam: Elsevier, 2005. ISBN 978-0-123-54051-5 <br> <em>Describes a collection of methods for user research. It is aimed at bigger teams (with time and money, I assume). However, its mentioned here since the idea of grouping data as core activity of data analysis is from it.</em></li>
-<li><strong>The Ethnographic Interview</strong> by James P. Spradley. Waveland Press. ISBN-13: 978-1478632078 <br> Focuses on understanding the participants’ language and jargon and consequently less on participants’ activities. Nevertheless a great intro, particularly the annotated examples. <!-- thanks to Jonathan Morgan, Wikimedia, for suggesting this book --></li>
+<li><strong>The Ethnographic Interview</strong> by James P. Spradley. Waveland Press. ISBN-13: 978-1478632078 <br> <em>Focuses on understanding the participants’ language and jargon and consequently less on participants’ activities. Nevertheless a great intro, particularly the annotated examples.</em> <!-- thanks to Jonathan Morgan, Wikimedia, for suggesting this book --></li>
 </ul>
 <h3 id="examples">Examples</h3>
 <ul>
@@ -1767,6 +1770,17 @@ Before:</p>
 <li><a href="https://github.com/idno/User-Research/tree/master/Interviews">Example Interview Guides</a> (by Erin Richey, CC0)</li>
 </ul>
 <h2 id="forms-and-templates">Forms and Templates</h2>
+<h3 id="co-documentation-templates">Co-Documentation Templates</h3>
+<p>If you read this on a computer, you can download the templates via right-click → “save image as”</p>
+<figure>
+<img src="images/CoDocument_Template_FeelingTime_eng.svg" alt="Co-Documentation Template for graphing and annotating a participant’s mood over time" /><figcaption>Co-Documentation Template for graphing and annotating a participant’s mood over time</figcaption>
+</figure>
+<figure>
+<img src="images/CoDocument_Template_PeopleCollaboration_eng.svg" alt="Co-Documentation Template for diagramming the context of a participant’s work" /><figcaption>Co-Documentation Template for diagramming the context of a participant’s work</figcaption>
+</figure>
+<figure>
+<img src="images/CoDocument_Template_Process_eng.svg" alt="Co-Documentation Template for documenting a workflow" /><figcaption>Co-Documentation Template for documenting a workflow</figcaption>
+</figure>
 <h3 id="consentForm">Consent and Release Form</h3>
 <p>(based on a form from <a href="http://www.usability.gov/">http://www.usability.gov</a>, <a href="http://www.usability.gov/how-to-and-tools/resources/templates/consent-recording-release-form-adult.html">downloadable here</a>, released as public domain)</p>
 <p><br />
